# mewsik

./: .gitattributes  .gitignore  HANDOFF.md  PLAN.md  README.md  components.json  package.json  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  vite.config.ts
docs/: codex-handoff-station-health-and-remaining.md  codex-handoff-youtube-playback.md  discovery-provider-strategy-2026-07-14.md  product-direction-2026-07-14.md  provider-distribution-strategy-2026-07-14.md  (+2 more)
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/examples/: analyze.rs  verify_minisign.rs
src-tauri/icons/: icon.icns
src-tauri/nsis/: English.nsh
src-tauri/src/: config.rs  external_tools.rs  keychain.rs  lib.rs  main.rs
src-tauri/src/analysis/: decode.rs  features.rs  mod.rs  score.rs  structure.rs  tempo.rs
src-tauri/src/audio/: analyzer.rs  engine.rs  http_stream.rs  mod.rs  queue.rs
src-tauri/src/commands/: analysis.rs  discovery.rs  downloads.rs  external_search.rs  library.rs  mod.rs  playback.rs  playlists.rs  release.rs  search.rs  settings.rs  smart_playlists.rs  stations.rs
src-tauri/src/db/: migrations.rs  mod.rs  models.rs  queries.rs
src-tauri/src/discovery/: feed.rs  hosted.rs  mod.rs  recommendations.rs  sources.rs  store.rs  v2.rs
src-tauri/src/download/: mod.rs
src-tauri/src/metadata/: scanner.rs
src-tauri/src/sources/: mod.rs  orchestrator.rs  provider.rs  sidecar.rs  sidecar_manager.rs  stream_cache.rs  youtube.rs
src-tauri/src/stations/: directory.rs  health.rs  mod.rs  network.rs  probe.rs
(+126 files in other folders)
