[package]
name = "mewsik"
version = "0.1.0"
description = "Personal music streaming & discovery app"
authors = ["Remington Wilcox"]
license = "MIT"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "mewsik_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
tauri = { version = "2.10.3", features = ["tray-icon"] }
tauri-plugin-dialog = "2"
tauri-plugin-drag = "2.1.0"
tauri-plugin-log = "2"
tauri-plugin-shell = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
tokio = { version = "1", features = ["full"] }
rusqlite = { version = "0.31", features = ["bundled", "vtab"] }
symphonia = { version = "0.5", features = ["all"] }
rodio = { version = "0.19", default-features = false, features = ["symphonia-all"] }
cpal = "0.15"
lofty = "0.21"
reqwest = { version = "0.12", features = ["json", "stream", "blocking"] }
ulid = "1.1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
security-framework = "3"
sha2 = "0.10"
ebur128 = "0.1"
parking_lot = "0.12"
crossbeam-channel = "0.5"
walkdir = "2"
directories = "5"
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
fuzzy-matcher = "0.3"
async-trait = "0.1"
urlencoding = "2"
